Update global styles and add Bootstrap imports

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
 <main class="main">
   <div class="content">
     <div class="left-side"> 
-      <h1>CQRS CRUD APP</h1>
+      <h1 class="appName">CQRS CRUD APP</h1>
+ 
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
   </div>
